--- a/index.html
+++ b/index.html
@@ -25,9 +25,17 @@
             box-shadow: 0 10px 20px rgba(0,0,0,0.2);
         }
     </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11260644372"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'AW-11260644372');
+    </script>
     <!-- 
       ACTION REQUIRED: PHASE 1 - CONVERSION TRACKING
-      1. Paste your main Google Tag (gtag.js) right here. 
       2. Paste your "Calls from Website" Event Snippet right here.
     -->
 </head>
