--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="bg-gray-100 p-8 rounded-lg">
                     <h3 class="text-2xl font-bold text-gray-900 mb-4">Request Your Free Estimate!</h3>
                     <!-- NOTE: This is a sample form. You'll need to connect it to a service or your backend to receive submissions. -->
-                    <form action="/thank-you.html" method="POST"> <!-- This action should point to your "Thank You" page -->
+                    <form action="thank-you.html"> <!-- This now correctly points to the Thank You page without using the POST method -->
                         <div class="mb-4">
                             <label for="name" class="block text-gray-700 font-semibold mb-2">Full Name</label>
                             <input type="text" id="name" name="name" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500" required>
