--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!-- HERO SECTION -->
     <header class="hero-bg text-white">
         <div class="container mx-auto px-6 py-12 md:py-20 text-center">
-            <img src="https://images.squarespace-cdn.com/content/v1/64b8ce7983e67906ccb6616f/5b6094f5-caee-47d6-8b5e-9b762773f4c0/white_logo_transparent_background.png?format=2500w" alt="Mechanical Temp Logo" class="w-64 md:w-80 mx-auto mb-8">
+            <img src="https://images.squarespace-cdn.com/content/v1/64b8ce7983e67906ccb6616f/5b6094f5-caee-4d6-8b5e-9b762773f4c0/white_logo_transparent_background.png?format=2500w" alt="Mechanical Temp Logo" class="w-64 md:w-80 mx-auto mb-8">
             <h1 class="text-3xl md:text-5xl font-extrabold leading-tight mb-4">Fast, Reliable HVAC Service in Metro Detroit</h1>
             <p class="text-lg md:text-xl text-gray-300 max-w-3xl mx-auto mb-8">
                 Whether you're fighting the last of the summer heat or getting ready for winter, we provide 24/7 emergency repair and expert installation to keep your home perfectly comfortable.
@@ -118,8 +118,9 @@
                 <!-- Right Side: Contact Form -->
                 <div class="bg-gray-100 p-8 rounded-lg">
                     <h3 class="text-2xl font-bold text-gray-900 mb-4">Request Your Free Estimate!</h3>
-                    <!-- NOTE: This is a sample form. You'll need to connect it to a service or your backend to receive submissions. -->
-                    <form action="thank-you.html"> <!-- This now correctly points to the Thank You page without using the POST method -->
+                    <form action="https://formspree.io/f/xldwzbal" method="POST">
+                        <!-- This hidden input tells Formspree where to redirect the user after submission. -->
+                        <input type="hidden" name="_next" value="https://servicecoinrwb.github.io/mechanical-temp-landing-page/thank-you.html">
                         <div class="mb-4">
                             <label for="name" class="block text-gray-700 font-semibold mb-2">Full Name</label>
                             <input type="text" id="name" name="name" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500" required>
@@ -130,7 +131,7 @@
                         </div>
                         <div class="mb-4">
                             <label for="email" class="block text-gray-700 font-semibold mb-2">Email</label>
-                            <input type="email" id="email" name="email" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500" required>
+                            <input type="email" id="email" name="_replyto" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500" required>
                         </div>
                         <div class="mb-4">
                             <label for="message" class="block text-gray-700 font-semibold mb-2">How can we help?</label>
