--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             font-family: 'Inter', sans-serif;
         }
         .hero-bg {
-            background-image: linear-gradient(rgba(1, 22, 39, 0.8), rgba(1, 22, 39, 0.8)), url('https://images.unsplash.com/photo-1617902731839-93858a7e0674?ixlib=rb-4.0.3&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1920&fit=max');
+            background-image: linear-gradient(rgba(1, 22, 39, 0.8), rgba(1, 22, 39, 0.8)), url('https://images.unsplash.com/photo-1617902731839-93858a7e0674?ixlib-rb-4.0.3&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1920&fit=max');
             background-size: cover;
             background-position: center;
         }
@@ -34,10 +34,14 @@
     
       gtag('config', 'AW-11260644372');
     </script>
-    <!-- 
-      ACTION REQUIRED: PHASE 1 - CONVERSION TRACKING
-      2. Paste your "Calls from Website" Event Snippet right here.
-    -->
+    
+    <!-- Event snippet for Calls from Website Tracking -->
+    <script>
+      gtag('config', 'AW-11260644372/N24jCJH83M4YEJSYv_kp', {
+        'phone_conversion_number': '(313) 282-4758'
+      });
+    </script>
+
 </head>
 <body class="bg-gray-50">
 
