--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             font-family: 'Inter', sans-serif;
         }
         .hero-bg {
-            background-image: linear-gradient(rgba(1, 22, 39, 0.8), rgba(1, 22, 39, 0.8)), url('https://images.unsplash.com/photo-1617902731839-93858a7e0674?ixlib-rb-4.0.3&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1920&fit=max');
+            background-image: linear-gradient(rgba(1, 22, 39, 0.8), rgba(1, 22, 39, 0.8)), url('https://images.unsplash.com/photo-1617902731839-93858a7e0674?ixlib=rb-4.0.3&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1920&fit=max');
             background-size: cover;
             background-position: center;
         }
@@ -23,6 +23,14 @@
         .cta-button:hover {
             transform: translateY(-3px);
             box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+        }
+        .offer-banner {
+            animation: pulse 2s infinite;
+        }
+        @keyframes pulse {
+            0% { transform: scale(1); box-shadow: 0 0 0 0 rgba(220, 38, 38, 0.7); }
+            70% { transform: scale(1); box-shadow: 0 0 0 10px rgba(220, 38, 38, 0); }
+            100% { transform: scale(1); box-shadow: 0 0 0 0 rgba(220, 38, 38, 0); }
         }
     </style>
     <!-- Google tag (gtag.js) -->
@@ -76,6 +84,19 @@
 
     <!-- MAIN CONTENT -->
     <main class="container mx-auto p-6 md:p-12">
+        
+        <!-- SPECIAL OFFER BANNER -->
+        <section class="mb-12">
+            <div class="offer-banner bg-red-600 text-white rounded-lg shadow-lg p-6 text-center">
+                <div class="flex items-center justify-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-12 mr-4" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 5v2m0 4v2m0 4v2M5 5a2 2 0 00-2 2v3a2 2 0 110 4v3a2 2 0 002 2h14a2 2 0 002-2v-3a2 2 0 110-4V7a2 2 0 00-2-2H5z" /></svg>
+                    <div>
+                        <h2 class="text-3xl font-extrabold">FALL SPECIAL: $50 OFF Any Repair!</h2>
+                        <p class="text-lg text-red-200">Mention this offer when you call or book online to save. Limited time only.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         
         <!-- SERVICES SECTION -->
         <section class="my-12">
@@ -141,7 +162,7 @@
                             <label for="message" class="block text-gray-700 font-semibold mb-2">How can we help?</label>
                             <textarea id="message" name="message" rows="4" class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500" placeholder="e.g., 'My furnace isn't starting' or 'I need a quote for a new AC unit.'"></textarea>
                         </div>
-                        <button type="submit" class="cta-button w-full bg-red-600 hover:bg-red-700 text-white font-bold rounded-lg text-lg py-3">Schedule Service Now</button>
+                        <button type="submit" class="cta-button w-full bg-red-600 hover:bg-red-700 text-white font-bold rounded-lg text-lg py-3">Schedule Service & Claim Offer</button>
                     </form>
                 </div>
             </div>
