--- a/thank-you.html
+++ b/thank-you.html
@@ -5,35 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You! | Mechanical Temp</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: 'Inter', sans-serif;
-        }
+        body { font-family: 'Inter', sans-serif; }
     </style>
-
-    <!-- Google tag (gtag.js) - This is necessary for the event snippet to work -->
+    <!-- Your existing Google Tracking Codes go here -->
+    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=AW-11260644372"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-    
       gtag('config', 'AW-11260644372');
     </script>
-
     <!-- Event snippet for Website lead conversion page -->
     <script>
-      gtag('event', 'conversion', {'send_to': 'AW-11260644372/zPzBCIu16sKYEJEYSVw_kp'});
+      gtag('event', 'conversion', {'send_to': 'AW-11260644372/zPzBCIuI6sKYEJSYv_kp'});
     </script>
-
 </head>
 <body class="bg-gray-100 flex items-center justify-center h-screen">
-    <div class="text-center p-8 bg-white shadow-lg rounded-lg">
-        <svg class="w-16 h-16 text-green-500 mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6-6a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+    <div class="text-center bg-white p-12 rounded-lg shadow-xl max-w-lg mx-auto">
+        <svg class="w-16 h-16 text-green-500 mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
         <h1 class="text-3xl font-bold text-gray-800 mb-2">Thank You!</h1>
         <p class="text-gray-600 mb-6">Your request has been submitted successfully. We will be in touch with you shortly.</p>
-        <a href="https://servicecoinrwb.github.io/mechanical-temp-landing-page/" class="text-red-600 hover:underline">Return to the homepage</a>
+        <a href="https://www.mechanicaltemp.site" class="text-red-600 hover:underline font-semibold">Return to the homepage</a> <!-- UPDATE THIS URL WHEN YOU MOVE THE SITE -->
     </div>
 </body>
 </html>
