--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             </div>
             <div class="max-w-xl mx-auto">
                  <form action="https://formspree.io/f/xldwzbal" method="POST">
-                    <input type="hidden" name="_next" value="https://www.mechanicaltemp.site/thank-you.html"> <!-- UPDATE THIS URL WHEN YOU MOVE THE SITE -->
+                    <input type="hidden" name="_next" value="https://promo.mechanicaltemp.com/thank-you.html"> <!-- UPDATE THIS URL WHEN YOU MOVE THE SITE -->
                     <div class="mb-4">
                         <label for="name" class="block text-gray-700 font-semibold mb-2">Full Name</label>
                         <input type="text" id="name" name="name" class="w-full px-4 py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-red-500" required>
