--- a/thank-you.html
+++ b/thank-you.html
@@ -28,7 +28,7 @@
         <svg class="w-16 h-16 text-green-500 mx-auto mb-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
         <h1 class="text-3xl font-bold text-gray-800 mb-2">Thank You!</h1>
         <p class="text-gray-600 mb-6">Your request has been submitted successfully. We will be in touch with you shortly.</p>
-        <a href="promo.mechanicaltemp.com" class="text-red-600 hover:underline font-semibold">Return to the homepage</a> <!-- UPDATE THIS URL WHEN YOU MOVE THE SITE -->
+        <a href="https://promo.mechanicaltemp.com" class="text-red-600 hover:underline font-semibold">Return to the homepage</a>
     </div>
 </body>
 </html>
